feat: teleport portal building